--- a/menu.html
+++ b/menu.html
@@ -2,23 +2,6 @@
 <!DOCTYPE html>
 <html lang="en">
 
-<!-- Part 2: HTML and CSS:
-        The following is a list of requirements for HTML and CSS:
-        1. Please include your name as comments at the top of each HTML and CSS file.
-        2. An HTML page for each of the pages in your site.
-        3. All pages should have appropriate meta data and titles in their head sections.
-        4. All pages should have HTML content in place to provide for page layout (headers,
-        sections, lists, etc.).
-        5. A navigation structure should be in place and formatted on all pages.
-        6. All image files should be placed in an images folder.
-        7. Any images that are included should be properly formatted.
-        8. Your HTML should pass validation at http://validator.w3.org/#validate_by_ upload
-        9. At least one external style sheet.
-        10. CSS style sheets should go in their own folder (naming of your choice).
-        11. You should have at least 2 declared font-types (font families) that are being used.
-        12. At least 1 form, with a minimum of 3 form elements, to gather information. You
-        should have at least one required field and validate at least one field. -->
-
 <head>
         <title>Project 1 Draft</title>
         <link rel="shortcut icon" href="images/favicon.ico">
@@ -46,18 +29,80 @@
         </div>
 
 
-        <div id=ourmenudiv style="color: black; font-size: 20px; text-align: center; margin-top: 30px; margin-bottom: 30px">
+        <div id=ourmenudiv
+                style="color: black; font-size: 20px; text-align: center; margin-top: 30px; margin-bottom: 30px">
                 <i>Our Menu</i>
         </div>
 
         <div id=burgersandsandwichesdiv style="background: white; margin: 50px">
                 <h1 style="color: red"><u>Burgers & Sandwiches</u></h1>
-                <div style="text-align: center; margin: 20px"><h3>Add a small order of fries to any sandwich 
-                                Just .99 Cents</h3></div>
+                <div style="text-align: center; margin: 20px">
+                        <h3>Add a small order of fries to any sandwich
+                                Just .99 Cents</h3>
+                </div>
                 <div style="margin: 50px">
                         <img src="images/burgersinmenuandprices.png" alt="Burger Prices">
-                </div>                
+                </div>
         </div>
+
+        <div class="clear">
+
+        </div>
+
+        <div style="visibility: hidden">
+
+                ek
+                2
+                3
+                <br />
+                <br />
+                ek
+                2
+                3
+                <br />
+                <br />
+                <br />
+
+        </div>
+
+
+
+        <footer id=footerdiv style="background-color: black; height: 100px; margin-left: 30px; margin-right: 30px;">
+                <div id="headerdivrightsidenavbar" style="float: left; visibility: hidden;">
+                        <nav>
+                                <a href="">HOME</a>
+                                <a href="">MENU</a>
+                                <a href="">CART</a>
+                                <a href="">CONTACT</a>
+                        </nav>
+                </div>
+                <div id="headerdivrightsidenavbar" style="float: left; visibility: hidden;">
+                        <nav>
+                                <a href="">HOME</a>
+                                <a href="">MENU</a>
+                        </nav>
+                </div>
+                <div id="headerdivrightsidenavbar" style="float: left; visibility: visible;">
+                        <nav>
+                                <a style="color: gray;" href="home.html">HOME</a>
+                                <a style="color: gray;" href="menu.html">MENU</a>
+                                <a style="color: gray;" href="cart.html">CART</a>
+                                <a style="color: gray;" href="contact.html">CONTACT</a>
+                        </nav>
+                </div>
+                <div class="clear"></div>
+                <div id="headerdivrightsidenavbar" style="float: left; visibility: hidden;">
+                        <nav>
+                                <a href="">HOME</a>
+                                <a href="">MENU</a>
+                                <a href="">CART</a>
+                                <a href="">CONTACT</a>
+                        </nav>
+                </div>
+                <div>
+                        <img src="images/creditcardpicture" alt="">
+                </div>
+        </footer>
 
 
 </body>
