added 4 js functions and 1 common jquery function. All documents pass validator by file upload.

--- a/menu.html
+++ b/menu.html
@@ -3,12 +3,13 @@
 <html lang="en">
 
 <head>
-        <title>Project 1 Draft</title>
+        <title>Best Burgers!</title>
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
         <link rel="shortcut icon" href="images/favicon.ico">
         <link rel="stylesheet" href="css/styles.css">
 
         <meta name="description" content="Best Burger Menu Page">
-
+        <meta charset="UTF-8">
         <meta name="keywords" content="Burgers, Pizza, Food, Fast Food">
 
 </head>
@@ -18,7 +19,7 @@
                 <div id="headerdivleftsideimg">
                         <img src="images/logoforheader.png" alt="logo for header" width="289" height="60">
                 </div>
-                <div id="headerdivrightsidenavbar">
+                <div id="headerdivrightsidenavbar1">
                         <nav>
                                 <a href="home.html">HOME</a>
                                 <a href="menu.html">MENU</a>
@@ -87,7 +88,6 @@
                 <div style="float: left; background: white; height: 280px; width: 66px">
                 </div>
         </div>
-        </div>
 
         <div class="clear">
 
@@ -112,7 +112,7 @@
 
 
         <footer id=footerdiv style="background-color: black; height: 100px; margin-left: 30px; margin-right: 30px;">
-                <div id="headerdivrightsidenavbar" style="float: left; visibility: hidden;">
+                <div id="headerdivrightsidenavbar2" style="float: left; visibility: hidden;">
                         <nav>
                                 <a href="">HOME</a>
                                 <a href="">MENU</a>
@@ -120,13 +120,13 @@
                                 <a href="">CONTACT</a>
                         </nav>
                 </div>
-                <div id="headerdivrightsidenavbar" style="float: left; visibility: hidden;">
+                <div id="headerdivrightsidenavbar3" style="float: left; visibility: hidden;">
                         <nav>
                                 <a href="">HOME</a>
                                 <a href="">MENU</a>
                         </nav>
                 </div>
-                <div id="headerdivrightsidenavbar" style="float: left; visibility: visible;">
+                <div id="headerdivrightsidenavbar4" style="float: left; visibility: visible;">
                         <nav>
                                 <a style="color: gray;" href="home.html">HOME</a>
                                 <a style="color: gray;" href="menu.html">MENU</a>
@@ -135,7 +135,7 @@
                         </nav>
                 </div>
                 <div class="clear"></div>
-                <div id="headerdivrightsidenavbar" style="float: left; visibility: hidden;">
+                <div id="headerdivrightsidenavbar5" style="float: left; visibility: hidden;">
                         <nav>
                                 <a href="">HOME</a>
                                 <a href="">MENU</a>
