--- a/cart.html
+++ b/cart.html
@@ -3,12 +3,13 @@
 <html lang="en">
 
 <head>
-        <title>Project 1 Draft</title>
+        <title>Best Burgers!</title>
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
         <link rel="shortcut icon" href="images/favicon.ico">
         <link rel="stylesheet" href="css/styles.css">
 
         <meta name="description" content="Project 1 Draft">
-
+        <meta charset="UTF-8">
         <meta name="keywords" content="Burgers, Pizza, Food, Fast Food">
 
 </head>
@@ -18,7 +19,7 @@
                 <div id="headerdivleftsideimg">
                         <img src="images/logoforheader.png" alt="logo for header" width="289" height="60">
                 </div>
-                <div id="headerdivrightsidenavbar">
+                <div id="headerdivrightsidenavbar1">
                         <nav>
                                 <a href="home.html">HOME</a>
                                 <a href="menu.html">MENU</a>
@@ -30,7 +31,14 @@
 
 
         <div style="float: left; color: white; margin-top: 50px; margin-left: 50px">
-                <h2>Your cart is empty. Add burgers and then come back to cart page.</h2>
+                <h2>Your cart is empty. </h2>
+                <ol style="margin: 20px; list-style-type: none">
+                        <li><input type="checkbox" id="zingerburger" value="zingerburger"> <span>&nbsp; &nbsp; Zinger
+                                        Burger &nbsp; &nbsp; $5.99</span></li>
+                        <li><input type="checkbox" id="bunkabab" value="bunkabab"> <span> &nbsp; &nbsp; Bun Kabab &nbsp;
+                                        &nbsp; $5.99</span></li>
+                </ol>
+                <input type="submit" value="Submit" class="submitButtonCart" onclick="pickupAtTheStore()" />
         </div>
 
         <div style="float: right">
@@ -83,7 +91,7 @@
 
 
         <footer id=footerdiv style="background-color: black; height: 100px; margin-left: 30px; margin-right: 30px;">
-                <div id="headerdivrightsidenavbar" style="float: left; visibility: hidden;">
+                <div id="headerdivrightsidenavbar2" style="float: left; visibility: hidden;">
                         <nav>
                                 <a href="">HOME</a>
                                 <a href="">MENU</a>
@@ -91,13 +99,13 @@
                                 <a href="">CONTACT</a>
                         </nav>
                 </div>
-                <div id="headerdivrightsidenavbar" style="float: left; visibility: hidden;">
+                <div id="headerdivrightsidenavbar3" style="float: left; visibility: hidden;">
                         <nav>
                                 <a href="">HOME</a>
                                 <a href="">MENU</a>
                         </nav>
                 </div>
-                <div id="headerdivrightsidenavbar" style="float: left; visibility: visible;">
+                <div id="headerdivrightsidenavbar4" style="float: left; visibility: visible;">
                         <nav>
                                 <a style="color: gray;" href="home.html">HOME</a>
                                 <a style="color: gray;" href="menu.html">MENU</a>
@@ -106,7 +114,7 @@
                         </nav>
                 </div>
                 <div class="clear"></div>
-                <div id="headerdivrightsidenavbar" style="float: left; visibility: hidden;">
+                <div id="headerdivrightsidenavbar5" style="float: left; visibility: hidden;">
                         <nav>
                                 <a href="">HOME</a>
                                 <a href="">MENU</a>
@@ -119,7 +127,7 @@
                 </div>
         </footer>
 
-
+        <script src="scripts/commonUtil.js"></script>
 </body>
 
 </html>
