--- a/contact.html
+++ b/contact.html
@@ -3,11 +3,12 @@
 <html lang="en">
 
 <head>
-        <title>Project 1 Draft</title>
+        <title>Best Burgers!</title>
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
         <link rel="shortcut icon" href="images/favicon.ico">
         <link rel="stylesheet" href="css/styles.css">
         <meta name="description" content="Project 1 Draft">
-
+        <meta charset="UTF-8">
         <meta name="keywords" content="Burgers, Pizza, Food, Fast Food">
 
 </head>
@@ -17,7 +18,7 @@
                 <div id="headerdivleftsideimg">
                         <img src="images/logoforheader.png" alt="logo for header" width="289" height="60">
                 </div>
-                <div id="headerdivrightsidenavbar">
+                <div id="headerdivrightsidenavbar1">
                         <nav>
                                 <a href="home.html">HOME</a>
                                 <a href="menu.html">MENU</a>
@@ -37,33 +38,29 @@
 
         <div id="formdiv" style="color: white; margin-top: 50px; margin-left: 50px; font-size: 20px">
                 <h4>To Send a message directly, fill out the form below:</h4>
-                <article>
-                        <section>
-                                <form method="GET" action="menu.html" onsubmit="return validateForm()" >
-                                        <div>
-                                                <br />
-                                                Name: <br />
-                                                <input type="text" id="contactName">
-                                                <br />
-                                                Email: <br />
-                                                <input type="email" id="contactEmail" required=true>
-                                                <br />
-                                                Message: <br />
-                                                <textarea name="" id="contactMessage" cols="30" rows="10"></textarea>
-                                                <br />
-                                                <input type="submit" value="Submit"/>
-                                                <br />
-                                                <br />
-                                                <br />
-                                                <br />
-                                        </div>
-                                </form>
-                        </section>
-                </article>
+                <form method="GET" action="menu.html" onsubmit="return validateForm()">
+                        <div>
+                                <br />
+                                Name: <br />
+                                <input type="text" id="contactName">
+                                <br />
+                                Email: <br />
+                                <input type="email" id="contactEmail" required>
+                                <br />
+                                Message: <br />
+                                <textarea id="contactMessage" cols="30" rows="10"></textarea>
+                                <br />
+                                <input type="submit" value="Submit" />
+                                <br />
+                                <br />
+                                <br />
+                                <br />
+                        </div>
+                </form>
         </div>
 
         <footer id=footerdiv style="background-color: black; height: 100px; margin-left: 30px; margin-right: 30px">
-                <div id="headerdivrightsidenavbar" style="float: left; visibility: hidden;">
+                <div id="headerdivrightsidenavbar2" style="float: left; visibility: hidden;">
                         <nav>
                                 <a href="">HOME</a>
                                 <a href="">MENU</a>
@@ -71,13 +68,13 @@
                                 <a href="">CONTACT</a>
                         </nav>
                 </div>
-                <div id="headerdivrightsidenavbar" style="float: left; visibility: hidden;">
+                <div id="headerdivrightsidenavbar3" style="float: left; visibility: hidden;">
                         <nav>
                                 <a href="">HOME</a>
                                 <a href="">MENU</a>
                         </nav>
                 </div>
-                <div id="headerdivrightsidenavbar" style="float: left; visibility: visible;">
+                <div id="headerdivrightsidenavbar4" style="float: left; visibility: visible;">
                         <nav>
                                 <a style="color: gray;" href="home.html">HOME</a>
                                 <a style="color: gray;" href="menu.html">MENU</a>
@@ -86,7 +83,7 @@
                         </nav>
                 </div>
                 <div class="clear"></div>
-                <div id="headerdivrightsidenavbar" style="float: left; visibility: hidden;">
+                <div id="headerdivrightsidenavbar5" style="float: left; visibility: hidden;">
                         <nav>
                                 <a href="">HOME</a>
                                 <a href="">MENU</a>
