--- a/cart.html
+++ b/cart.html
@@ -103,6 +103,8 @@
                         <nav>
                                 <a href="">HOME</a>
                                 <a href="">MENU</a>
+                                <a href="">CART</a>
+                                <a href="">CONTACT</a>
                         </nav>
                 </div>
                 <div id="headerdivrightsidenavbar4" style="float: left; visibility: visible;">
@@ -120,6 +122,13 @@
                                 <a href="">MENU</a>
                                 <a href="">CART</a>
                                 <a href="">CONTACT</a>
+                        </nav>
+                </div>
+                <div id="headerdivrightsidenavbar6" style="float: left; visibility: hidden;">
+                        <nav>
+                                <a href="">HOME</a>
+                                <a href="">MENU</a>
+                                <a href="">CART</a>
                         </nav>
                 </div>
                 <div>
