--- a/contact.html
+++ b/contact.html
@@ -42,15 +42,15 @@
                         <div>
                                 <br />
                                 Name: <br />
-                                <input type="text" id="contactName">
+                                <input type="text" id="contactName" size="30">
                                 <br />
                                 Email: <br />
-                                <input type="email" id="contactEmail" required>
+                                <input type="email" id="contactEmail" size="30" required>
                                 <br />
                                 Message: <br />
                                 <textarea id="contactMessage" cols="30" rows="10"></textarea>
                                 <br />
-                                <input type="submit" value="Submit" />
+                                <input type="submit" value="Submit" class="submitButtonCart" />
                                 <br />
                                 <br />
                                 <br />
@@ -72,6 +72,8 @@
                         <nav>
                                 <a href="">HOME</a>
                                 <a href="">MENU</a>
+                                <a href="">CART</a>
+                                <a href="">CONTACT</a>
                         </nav>
                 </div>
                 <div id="headerdivrightsidenavbar4" style="float: left; visibility: visible;">
@@ -89,6 +91,12 @@
                                 <a href="">MENU</a>
                                 <a href="">CART</a>
                                 <a href="">CONTACT</a>
+                        </nav>
+                </div>
+                <div id="headerdivrightsidenavbar6" style="float: left; visibility: hidden;">
+                        <nav>
+                                <a href="">HOME</a>
+                                <a href="">MENU</a>
                         </nav>
                 </div>
                 <div>
