--- a/home.html
+++ b/home.html
@@ -31,7 +31,7 @@
 
 
         <div id=comeforpizza>
-               
+
         </div>
 
         <div id="burgermainphoto" style="margin-left: 50px; margin-right: 20px;">
@@ -73,6 +73,8 @@
                         <nav>
                                 <a href="">HOME</a>
                                 <a href="">MENU</a>
+                                <a href="">CART</a>
+                                <a href="">CONTACT</a>
                         </nav>
                 </div>
                 <div id="headerdivrightsidenavbar4" style="float: left; visibility: visible;">
@@ -90,6 +92,12 @@
                                 <a href="">MENU</a>
                                 <a href="">CART</a>
                                 <a href="">CONTACT</a>
+                        </nav>
+                </div>
+                <div id="headerdivrightsidenavbar6" style="float: left; visibility: hidden;">
+                        <nav>
+                                <a href="">HOME</a>
+                                <a href="">MENU</a>
                         </nav>
                 </div>
                 <div>
