--- a/menu.html
+++ b/menu.html
@@ -38,7 +38,7 @@
         <div id=burgersandsandwichesdiv style="background: white; margin: 50px">
                 <h1 style="color: red"><u>Burgers & Sandwiches</u></h1>
                 <div id="showThisOfferOnWeekdays" style="text-align: center; margin-left: 20px; margin-right: 20px">
-                       
+
                 </div>
                 <div style="float: left; background: white">
                         <div style="float: left; margin: 60px">
@@ -124,6 +124,8 @@
                         <nav>
                                 <a href="">HOME</a>
                                 <a href="">MENU</a>
+                                <a href="">CART</a>
+                                <a href="">CONTACT</a>
                         </nav>
                 </div>
                 <div id="headerdivrightsidenavbar4" style="float: left; visibility: visible;">
@@ -141,6 +143,12 @@
                                 <a href="">MENU</a>
                                 <a href="">CART</a>
                                 <a href="">CONTACT</a>
+                        </nav>
+                </div>
+                <div id="headerdivrightsidenavbar6" style="float: left; visibility: hidden;">
+                        <nav>
+                                <a href="">HOME</a>
+                                <a href="">MENU</a>
                         </nav>
                 </div>
                 <div>
