menu page is done as well.

--- a/home.html
+++ b/home.html
@@ -100,12 +100,13 @@
                                 </div>
                                 <div id="headerdivrightsidenavbar6" style="float: left; visibility: hidden;">
                                         <nav>
-                                                <!-- <a href="">HOME</a> -->
                                                 <a href="">MENU</a>
                                         </nav>
                                 </div>
                                 <div>
-                                        <img src="images/creditcardpicture" alt="">
+                                        <a href="#">
+                                                <img src="images/creditcardpicture" alt="">
+                                        </a>
                                 </div>
                         </div>
                 </div>
