--- a/menu.html
+++ b/menu.html
@@ -35,21 +35,38 @@
                                 </nav>
                         </div>
                 </div>
-
-
-                <div id=ourmenudiv
-                        style="color: black; font-size: 20px; text-align: center; margin-top: 30px; margin-bottom: 30px">
-                        <i>Our Menu</i>
-                </div>
-
-                <div id=burgersandsandwichesdiv style="background: white; margin: 50px">
-                        <h1 style="color: red"><u>Burgers & Sandwiches</u></h1>
-                        <div id="showThisOfferOnWeekdays"
-                                style="text-align: center; margin-left: 20px; margin-right: 20px">
-
+                <div style="background-color: white; height: 700px;">
+                        <div id=ourmenudiv style="color: black; font-size: 20px; text-align: center;">
+                                <div style="visibility: hidden;">
+                                        <i>Our Menu</i>
+                                </div>
+                                <div style="visibility: hidden;">
+                                        <i>Our Menu</i>
+                                </div>
+                                <div style="visibility: hidden;">
+                                        <i>Our Menu</i>
+                                </div>
+                                <div
+                                        style="visibility: visible; font-family: 'Trebuchet MS', Helvetica, sans-serif; font-size: 45px;">
+                                        <i>Our Menu</i>
+                                </div>
+                                <div style="visibility: hidden;">
+                                        <i>Our Menu</i>
+                                </div>
+                                <div style="visibility: hidden;">
+                                        <i>Our Menu</i>
+                                </div>
                         </div>
-                        <div style="float: left; background: white">
-                                <div style="float: left; margin: 60px">
+
+                        <div id=burgersandsandwichesdiv>
+                                <div
+                                        style="font-size: 40px; color: #D2202F; border-bottom: 5px solid #D2202F; font-family: 'Trebuchet MS', Helvetica, sans-serif;">
+                                        Burgers & Sandwiches
+                                </div>
+                                <div id="showThisOfferOnWeekdays" style="text-align: center; margin-left: 20px; margin-right: 20px; margin-top: 40px; margin-bottom: 40px; font-size: 24px;
+                                        text-shadow: 1px 1px #E69316;">
+                                </div>
+                                <div style=" float: left; margin: 60px">
                                         <div
                                                 style="color: rgb(191,162,101); font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif">
                                                 <h4>ZINGER BURGER</h4>
@@ -58,13 +75,16 @@
                                                         <img src="images/zingerburger.png" alt="zingerburger">
                                                 </div>
                                                 <div style="float: right">
-                                                        <p style="color: black"> &nbsp; &nbsp; Well seasoned fried
+                                                        <p style="color: black"> &nbsp; &nbsp; Well seasoned
+                                                                fried
                                                                 chicken patty
                                                         </p>
-                                                        <p style="color: black"> &nbsp; &nbsp; layered with our special
+                                                        <p style="color: black"> &nbsp; &nbsp; layered with our
+                                                                special
                                                                 homemade
                                                                 sauce</p>
-                                                        <p style="color: black"> &nbsp; &nbsp; good old mayo with
+                                                        <p style="color: black"> &nbsp; &nbsp; good old mayo
+                                                                with
                                                                 lettuce and
                                                                 onions on a </p>
                                                         <p style="color: black"> &nbsp; &nbsp; seasoned bun.</p>
@@ -72,9 +92,7 @@
                                                 </div>
                                         </div>
                                 </div>
-                        </div>
-                        <div style="float: left; background: white">
-                                <div style="float: left; margin: 60px">
+                                <div style=" float: left; margin: 60px">
                                         <div
                                                 style="color: rgb(191,162,101); font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif">
                                                 <h4>BUN KABAB</h4>
@@ -83,51 +101,31 @@
                                                         <img src="images/bunkabab.png" alt="bunkabab">
                                                 </div>
                                                 <div style="float: right">
-                                                        <p style="color: black"> &nbsp; &nbsp; A tradional Pakistani
+                                                        <p style="color: black"> &nbsp; &nbsp; A tradional
+                                                                Pakistani
                                                                 burger. A
                                                                 well done beef
                                                         </p>
-                                                        <p style="color: black"> &nbsp; &nbsp; patty covered with home
+                                                        <p style="color: black"> &nbsp; &nbsp; patty covered
+                                                                with home
                                                                 made
                                                                 spices,</p>
-                                                        <p style="color: black"> &nbsp; &nbsp; topped with some veggies
+                                                        <p style="color: black"> &nbsp; &nbsp; topped with some
+                                                                veggies
                                                                 and a
                                                         </p>
-                                                        <p style="color: black"> &nbsp; &nbsp; special green sauce
+                                                        <p style="color: black"> &nbsp; &nbsp; special green
+                                                                sauce
                                                                 (chutni).</p>
                                                         <p style="color: red">&nbsp; &nbsp; $5.99</p>
                                                 </div>
                                         </div>
                                 </div>
                         </div>
-                        <div style="float: left; background: white; height: 280px; width: 66px">
-                        </div>
-                </div>
-
-                <div class="clear">
 
                 </div>
 
-                <div style="visibility: hidden">
-
-                        ek
-                        2
-                        3
-                        <br />
-                        <br />
-                        ek
-                        2
-                        3
-                        <br />
-                        <br />
-                        <br />
-
-                </div>
-
-
-
-                <footer id=footerdiv
-                        style="background-color: black; height: 100px; margin-left: 30px; margin-right: 30px;">
+                <footer id=footerdiv style="background-color: black; height: 100px;">
                         <div id="headerdivrightsidenavbar2" style="float: left; visibility: hidden;">
                                 <nav>
                                         <a href="">HOME</a>
@@ -140,8 +138,6 @@
                                 <nav>
                                         <a href="">HOME</a>
                                         <a href="">MENU</a>
-                                        <a href="">CART</a>
-                                        <a href="">CONTACT</a>
                                 </nav>
                         </div>
                         <div id="headerdivrightsidenavbar4" style="float: left; visibility: visible;">
@@ -164,11 +160,12 @@
                         <div id="headerdivrightsidenavbar6" style="float: left; visibility: hidden;">
                                 <nav>
                                         <a href="">HOME</a>
-                                        <a href="">MENU</a>
                                 </nav>
                         </div>
                         <div>
-                                <img src="images/creditcardpicture" alt="">
+                                <a href="#">
+                                        <img src="images/creditcardpicture" alt="">
+                                </a>
                         </div>
                 </footer>
         </div>
