crt is orking fine as well

--- a/cart.html
+++ b/cart.html
@@ -51,20 +51,41 @@
                                 </thead>
                                 <tbody>
                                         <tr>
-                                                <td><input type="checkbox" id="bunkababcheckbox" value="5.99" onchange="changePrice()"></td>
+                                                <td><input type="checkbox" id="bunkababcheckbox" value="5.99"
+                                                                onchange="changePrice()"></td>
                                                 <td>Zinger Burger</td>
                                                 <td>$5.99</td>
                                         </tr>
                                         <tr>
-                                                <td><input type="checkbox" id="zingerburgercheckbox" value="6.99" onchange="changePrice()"></td>
+                                                <td><input type="checkbox" id="zingerburgercheckbox" value="6.99"
+                                                                onchange="changePrice()"></td>
                                                 <td>Bun Kabab</td>
                                                 <td>$6.99</td>
+                                        </tr>
+                                        <tr>
+                                                <td><input type="checkbox" id="biharikababcheckbox" value="8.99"
+                                                                onchange="changePrice()"></td>
+                                                <td>Bihari Kabab Sandwich</td>
+                                                <td>$8.99</td>
+                                        </tr>
+                                        <tr>
+                                                <td><input type="checkbox" id="gyropitacheckbox" value="10.99"
+                                                                onchange="changePrice()"></td>
+                                                <td>Gyro Pita Chicken</td>
+                                                <td>$10.99</td>
+                                        </tr>
+                                        <tr>
+                                                <td><input type="checkbox" id="pitaspicychickencheckbox" value="7.99"
+                                                                onchange="changePrice()"></td>
+                                                <td>Pita Spicy Chicken</td>
+                                                <td>$7.99</td>
                                         </tr>
                                 </tbody>
                         </table>
 
                         <div style="font-size: 20px;">
-                                Total: <input type="text" id="totalprice" size="20px" style="line-height: 20px; margin-left: 10px; text-align:right;" />
+                                Total: <input type="text" id="totalprice" size="20px"
+                                        style="line-height: 20px; margin-left: 10px; text-align:right;" />
                         </div>
                         <div style="margin-top: 20px;">
                                 <input type="submit" value="Submit" class="submitButtonCart"
