--- a/cart.html
+++ b/cart.html
@@ -37,7 +37,7 @@
 
                 <div
                         style="float: left; color: white; margin-top: 50px; margin-left: 50px; font-family: 'Trebuchet MS', Helvetica, sans-serif; text-shadow: 1px 1px 1px #000000;">
-                        <h2>Your cart is empty. </h2>
+                        <div id="cartemptymessage" style="font-size: 24px;">Your cart is empty. Please add items below</div>
                         <div style="visibility: hidden; margin: 10px">
                                 hidden div
                         </div>
