added more items in menu.

--- a/menu.html
+++ b/menu.html
@@ -35,7 +35,7 @@
                                 </nav>
                         </div>
                 </div>
-                <div style="background-color: white; height: 700px;">
+                <div style="background-color: white; height: 1200px;">
                         <div id=ourmenudiv style="color: black; font-size: 20px; text-align: center;">
                                 <div style="visibility: hidden;">
                                         <i>Our Menu</i>
@@ -68,7 +68,7 @@
                                 </div>
                                 <div style=" float: left; margin: 60px">
                                         <div
-                                                style="color: rgb(191,162,101); font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif">
+                                                style="color: rgb(191,162,101); font-size: 16px !important; font-family: Arial, Helvetica, sans-serif;">
                                                 <h4>ZINGER BURGER</h4>
                                                 <div class="clear"></div>
                                                 <div style="float: left">
@@ -94,7 +94,7 @@
                                 </div>
                                 <div style=" float: left; margin: 60px">
                                         <div
-                                                style="color: rgb(191,162,101); font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif">
+                                                style="color: rgb(191,162,101); font-family: Arial, Helvetica, sans-serif;">
                                                 <h4>BUN KABAB</h4>
                                                 <div class="clear"></div>
                                                 <div style="float: left">
@@ -121,8 +121,60 @@
                                                 </div>
                                         </div>
                                 </div>
+                                <div class="clear"></div>
+                                <div style=" float: left; margin: 50px">
+                                        <div
+                                                style="color: rgb(191,162,101); font-family: Arial, Helvetica, sans-serif;">
+                                                <h4>Bihari Kabab Sandwich</h4>
+                                                <div class="clear"></div>
+                                                <div style="float: left">
+                                                        <img src="images/biharikababsandwich.png"
+                                                                alt="biharikababsandwich">
+                                                </div>
+                                                <div style="float: right">
+                                                        <p style="color: black"> &nbsp; &nbsp; Starts out with beef
+                                                                strips marinated in Bihari
+                                                        </p>
+                                                        <p style="color: black"> &nbsp; &nbsp; Masala and fried to
+                                                                perferction. Topped off with</p>
+                                                        <p style="color: black"> &nbsp; &nbsp; a special homemade sauce,
+                                                                lettuce, onions
+                                                        </p>
+                                                        <p style="color: black"> &nbsp; &nbsp; and tomatoes. All served
+                                                                on a gourmet French</p>
+                                                        <p style="color: black"> &nbsp; &nbsp; bread.</p>
+                                                        <p style="color: red">&nbsp; &nbsp; $5.99</p>
+                                                </div>
+                                        </div>
+                                </div>
+                                <div style=" float: left; margin: 60px">
+                                        <div
+                                                style="color: rgb(191,162,101); font-family: Arial, Helvetica, sans-serif;">
+                                                <h4>Gyro Pita Chicken</h4>
+                                                <div class="clear"></div>
+                                                <div style="float: left">
+                                                        <img src="images/gyropitachicken.png" alt="gyropitachicken">
+                                                </div>
+                                                <div style="float: right">
+                                                        <p style="color: black"> &nbsp; &nbsp; Take our popular Chicken
+                                                                Pita
+                                                        </p>
+                                                        <p style="color: black"> &nbsp; &nbsp; Sandwichwith its boneless
+                                                                chicken
+                                                        </p>
+                                                        <p style="color: black"> &nbsp; &nbsp; pieces, mayo, lettuce,
+                                                                onion, </p>
+                                                        <p style="color: black"> &nbsp; &nbsp; tomato and add
+                                                                gyros on top </p>
+                                                        <p style="color: black"> &nbsp; &nbsp; to give you double the
+                                                                meat </p>
+                                                        <p style="color: black"> &nbsp; &nbsp; and
+                                                                double the flavor.</p>
+                                                        <p style="color: red">&nbsp; &nbsp; $5.99</p>
+                                                </div>
+                                        </div>
+                                </div>
                         </div>
-
                 </div>
 
                 <footer id=footerdiv style="background-color: black; height: 100px;">
