fixed w3.validator issues.

--- a/cart.html
+++ b/cart.html
@@ -84,7 +84,7 @@
                         </table>
 
                         <div style="font-size: 20px;">
-                                Total: <input type="text" id="totalprice" size="20px"
+                                Total: <input type="text" id="totalprice" size="20"
                                         style="line-height: 20px; margin-left: 10px; text-align:right;" />
                         </div>
                         <div style="margin-top: 20px;">
