--- a/contact.html
+++ b/contact.html
@@ -36,7 +36,7 @@
                 <div id="googlemapdiv" style="float: right; margin-top: 50px;">
 
                         <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d11855.78858505622!2d-88.08932300915114!3d42.022866228722734!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x880faed807798ac3%3A0x675c1a31b1aa98ce!2sMama+Maria+Pizza+and+More!5e0!3m2!1sen!2sus!4v1564022424293!5m2!1sen!2sus"
-                                width="600" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
+                                width="600" height="450" style="border:0" allowfullscreen></iframe>
                 </div>
 
                 <div
